fix: keyboard tooltips were clipped

--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -211,8 +211,6 @@ body > .ML__keyboard.is-visible.animate > .MLK__backdrop {
   transform: translate(0, 0);
 
   background: var(--keyboard-background);
-
-  overflow: hidden;
 }
 
 .backdrop-is-transparent .MLK__backdrop {
